[gd_scene load_steps=5 format=2]

[ext_resource path="res://Sprites/icon.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Slot.gd" type="Script" id=2]
[ext_resource path="res://Scripts/Inventory.gd" type="Script" id=3]

[sub_resource type="StyleBoxTexture" id=1]
texture = ExtResource( 1 )
region_rect = Rect2( 0, 0, 80, 80 )

[node name="Inventory" type="Node2D"]
script = ExtResource( 3 )

[node name="SlotGrid" type="GridContainer" parent="."]
margin_right = 976.0
margin_bottom = 80.0
custom_constants/vseparation = 32
custom_constants/hseparation = 32
columns = 9
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Slot1" type="Panel" parent="SlotGrid"]
margin_right = 80.0
margin_bottom = 80.0
rect_min_size = Vector2( 80, 80 )
mouse_filter = 1
custom_styles/panel = SubResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Slot2" type="Panel" parent="SlotGrid"]
margin_left = 112.0
margin_right = 192.0
margin_bottom = 80.0
rect_min_size = Vector2( 80, 80 )
mouse_filter = 1
custom_styles/panel = SubResource( 1 )
script = ExtResource( 2 )

[node name="Slot3" type="Panel" parent="SlotGrid"]
margin_left = 224.0
margin_right = 304.0
margin_bottom = 80.0
rect_min_size = Vector2( 80, 80 )
mouse_filter = 1
custom_styles/panel = SubResource( 1 )
script = ExtResource( 2 )

[node name="Slot4" type="Panel" parent="SlotGrid"]
margin_left = 336.0
margin_right = 416.0
margin_bottom = 80.0
rect_min_size = Vector2( 80, 80 )
mouse_filter = 1
custom_styles/panel = SubResource( 1 )
script = ExtResource( 2 )

[node name="Slot5" type="Panel" parent="SlotGrid"]
margin_left = 448.0
margin_right = 528.0
margin_bottom = 80.0
rect_min_size = Vector2( 80, 80 )
mouse_filter = 1
custom_styles/panel = SubResource( 1 )
script = ExtResource( 2 )

[node name="Slot6" type="Panel" parent="SlotGrid"]
margin_left = 560.0
margin_right = 640.0
margin_bottom = 80.0
rect_min_size = Vector2( 80, 80 )
mouse_filter = 1
custom_styles/panel = SubResource( 1 )
script = ExtResource( 2 )

[node name="Slot7" type="Panel" parent="SlotGrid"]
margin_left = 672.0
margin_right = 752.0
margin_bottom = 80.0
rect_min_size = Vector2( 80, 80 )
mouse_filter = 1
custom_styles/panel = SubResource( 1 )
script = ExtResource( 2 )

[node name="Slot8" type="Panel" parent="SlotGrid"]
margin_left = 784.0
margin_right = 864.0
margin_bottom = 80.0
rect_min_size = Vector2( 80, 80 )
mouse_filter = 1
custom_styles/panel = SubResource( 1 )
script = ExtResource( 2 )

[node name="Slot9" type="Panel" parent="SlotGrid"]
margin_left = 896.0
margin_right = 976.0
margin_bottom = 80.0
rect_min_size = Vector2( 80, 80 )
mouse_filter = 1
custom_styles/panel = SubResource( 1 )
script = ExtResource( 2 )

[node name="InventoryBkg" type="TextureRect" parent="."]
visible = false
margin_right = 976.0
margin_bottom = 80.0
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="mouse_entered" from="SlotGrid" to="." method="_on_SlotGrid_mouse_entered"]
[connection signal="mouse_exited" from="SlotGrid" to="." method="_on_SlotGrid_mouse_exited"]
